// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiText is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-1p49t9d-euiText-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props grow false 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-1xlqmth-euiText-constrainedWidth-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;
